Fixed the databse structure to handle payments. installments and full payment with both payhere and bank transfer methods